# IDE

./: .gitignore  CLAUDE.md  DEMO_FASE1.md  Fase1.txt  README.md  TODO.md  instruccions.md  instructions.md  pruebaproadasdfa  pyproject.toml  requirements.txt
ArcaneCompiler/: compiler.py  pyproject.toml
ArcaneCompiler/src/arcane_compiler/: main.py
ArcaneCompiler/src/arcane_compiler/lexer/: lexer.py  token.py  token_type.py
ArcaneCompiler/src/arcane_compiler/parser/: ast_nodes.py  ast_serializer.py  parser.py
ArcaneCompiler/src/arcane_compiler/utils/: output.py
ArcaneCompiler/tests/: test_lexer.py  test_parser.py
ArcaneCompiler/tests/samples/: edge_cases.c  errors.c  pruebaSintaxis.c  syntax_errors.c  test_input.c  valid_full.c  valid_simple.c  valid_syntax_1.c  valid_syntax_2.c  valid_syntax_full.c
ArcaneIDE/src/core/: compiler_runner.py
ArcaneIDE/src/ui/: arcane_lexer.py  ast_tree_widget.py  editor_widget.py  file_tree.py  main_window.py  output_tabs.py
ArcaneIDE/src/ui/themes/: tokyo_night.xml
ArcaneIDE/src/utils/: constants.py
compiler/: compiler.py
src/: main.py
src/core/: compiler_runner.py  file_manager.py
src/ui/: editor_widget.py  file_tree.py  main_window.py  output_tabs.py
src/utils/: constants.py
