[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcane-compiler"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
arcane-compiler = "arcane_compiler.main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
